added in randomization of point location

--- a/kanopy/templates/kanopy/kanopy_display_map.html
+++ b/kanopy/templates/kanopy/kanopy_display_map.html
@@ -158,7 +158,7 @@ https://datadrivensecurity.info/blog/vis/malmaps-d3/
             "<dt>Date of photo</dt> <dd>" + feature.properties.photo_taken_date + "</dd>" +
             "<dt>Cumulative growing degree days</dt> <dd>" + feature.properties.gdd + "</dd>" +
             "<dt>Photo</dt> <dd>" + '<img src="' + feature.properties.image_url + '" width="250" height="250">' + "</dd>"
-            + "</dl>" + "The points here are not the actual collection points.";
+            + "</dl>" + "*This point is not the actual location of the photo. Collection locations have obscured to protect landowners privacy.";
 
         if (feature.properties && feature.properties.popupContent) {
             popupContent += feature.properties.popupContent;
